Sonarcloud issues - All bugs

--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -367,9 +367,9 @@
           <div class="e-mt-8">
             Notify when something goes wrong or the user is denied completing their task. Explain why and what
             to do. Example: Error, missing fields and invalid entry. This status can be used with
-            <b>local</b>
+            <strong>local</strong>
             and
-            <b>global alerts.</b>
+            <strong>global alerts.</strong>
           </div>
         </div>
       </div>
@@ -390,9 +390,9 @@
           <div class="e-mt-8">
             Help users to avoid error situations and to give attention to something undesirable that may
             occur. Explain why and what to do. This status can be used with
-            <b>local</b>
+            <strong>local</strong>
             and
-            <b>global alerts.</b>
+            <strong>global alerts.</strong>
           </div>
         </div>
       </div>
@@ -413,7 +413,7 @@
           <div class="e-mt-8">
             Provide a positive response to user actions, like a confirmation that an action is fully
             completed. Example: save, edit and submit. This status can only be used with the
-            <b>toast alerts.</b>
+            <strong>toast alerts.</strong>
           </div>
         </div>
       </div>
@@ -434,7 +434,7 @@
           <div class="e-mt-8">
             Inform users to understand minor contextual changes, and are not typically in response to a user
             action. Like a helpful tip or a suggestion. This status can be used with
-            <b>all alerts.</b>
+            <strong>all alerts.</strong>
           </div>
         </div>
       </div>
