--- a/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
@@ -109,9 +109,9 @@
               there is enough space between icon buttons and other elements to decrease the chance of
               accidentally pressing an incorrect target.
               <div class="e-mt-24" style="display: flex; flex-direction: row">
-                <img src="../../../../assets/button/Group 846.svg" class="e-mr-16" />
-                <img src="../../../../assets/button/Group 845.svg" class="e-mr-16" />
-                <img src="../../../../assets/button/Group 844.svg" class="e-mr-16" />
+                <img src="../../../../assets/button/Group 846.svg" class="e-mr-16" aria-hidden="true" />
+                <img src="../../../../assets/button/Group 845.svg" class="e-mr-16" aria-hidden="true" />
+                <img src="../../../../assets/button/Group 844.svg" class="e-mr-16" aria-hidden="true" />
               </div>
             </ng-container>
           </app-component-subsubsection>
