--- a/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
@@ -19,6 +19,7 @@
       src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0hCktnFvRvSHVDntaaOSEu%2FInputs%3Fnode-id%3D4473%253A27459"
       allowfullscreen
       (load)="hideContentLoader($event)"
+      title="Embedded sketches of timepicker in Figma"
     ></iframe>
   </div>
 </div>
