--- a/packages/web/src/app/doc-pages/components/position-picker-doc/position-picker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/position-picker-doc/position-picker-doc.component.html
@@ -51,6 +51,7 @@
                   width="500"
                   height="450"
                   src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0hCktnFvRvSHVDntaaOSEu%2FInputs%3Fnode-id%3D5002%253A35400"
+                  title="Embedded Figma sketch of a position picker when open"
                 ></iframe>
               </div>
             </ng-container>
@@ -63,6 +64,7 @@
                   width="500"
                   height="450"
                   src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0hCktnFvRvSHVDntaaOSEu%2FInputs%3Fnode-id%3D5181%253A36683"
+                  title="Embedded Figma sketch of a position picker when open on mobile"
                 ></iframe>
               </div>
             </ng-container>
@@ -76,6 +78,7 @@
             width="500"
             height="450"
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0hCktnFvRvSHVDntaaOSEu%2FInputs%3Fnode-id%3D5181%253A36988"
+            title="Embedded Figma sketch of a position picker after the position has been picked"
           ></iframe>
         </ng-container>
       </app-component-subsection>
