--- a/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
@@ -18,7 +18,7 @@
       <app-component-subsection [sectionTitle]="'Lack of space'">
         <ng-container ngProjectAs="sectionContent">
           <div>
-            <b>On mobile</b>
+            <strong>On mobile</strong>
             - You can put radio filter in a popover if there is a lack of space or if it should take up less
             focus. Popover is triggered by a button.
           </div>
