--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
@@ -137,7 +137,7 @@
                 </a>
               </li>
               <li>
-                <b>Icons:&nbsp;</b>
+                <strong>Icons:&nbsp;</strong>
                 <span class="code-text">e-icon--expand_circle-color</span>
                 &
                 <span class="code-text">e-icon--expand_circle-filled-color</span>
@@ -152,6 +152,7 @@
                     height="450"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fgh5MaG2NWKVODTk1p3cO6s%2FTables%3Fnode-id%3D3199%253A212"
                     allowfullscreen
+                    title="Figma sketch of accordion in a table"
                   ></iframe>
                 </div>
               </ng-container>
@@ -165,6 +166,7 @@
                     height="450"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fgh5MaG2NWKVODTk1p3cO6s%2FTables%3Fnode-id%3D3582%253A44807"
                     allowfullscreen
+                    title="Figma sketch of accordion in a table on mobile"
                   ></iframe>
                 </div>
               </ng-container>
@@ -458,7 +460,7 @@
                 </a>
               </li>
               <li>
-                <b>Icons:&nbsp;</b>
+                <strong>Icons:&nbsp;</strong>
                 <span class="code-text">e-icon--sorting-bold</span>
                 &
                 <span class="code-text">e-icon--sorting_ascending-bold</span>
@@ -479,6 +481,7 @@
                     height="450"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fgh5MaG2NWKVODTk1p3cO6s%2FTables%3Fnode-id%3D3561%253A44676"
                     allowfullscreen
+                    title="Figma sketch of sorting in a table"
                   ></iframe>
                 </div>
               </ng-container>
@@ -495,6 +498,7 @@
                     height="450"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fgh5MaG2NWKVODTk1p3cO6s%2FTables%3Fnode-id%3D3575%253A44807"
                     allowfullscreen
+                    title="Figma sketch of sorting in a table on mobile"
                   ></iframe>
                 </div>
               </ng-container>
