--- a/packages/web/src/app/doc-pages/other-pages/contribute/contribute.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contribute/contribute.component.html
@@ -28,6 +28,7 @@
           src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FJuIBvdgEKqL0UZ6OGX7VUu%2FBidragsmodell%3Fnode-id%3D0%253A1"
           allowfullscreen
           (load)="hideContentLoader($event)"
+          title="Contribution model for the design system"
         ></iframe>
       </div>
     </ng-container>
