--- a/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
@@ -5,7 +5,7 @@
   <ng-container ngProjectAs="headerDescription">
     <div class="e-text-lead">
       Elvia’s design system - or
-      <b>Elvis</b>
+      <strong>Elvis</strong>
       , for short - is a scalable system of visual language, components and design assets which enables us to
       work together towards an ultimate brand experience.
     </div>
@@ -40,7 +40,7 @@
       <!-- Easy -->
       <div class="principleContainer e-mb-72" style="margin-top: 88px">
         <div>
-          <img src="../../../../assets/the-design-system/video-game-magic-wand.svg" />
+          <img src="../../../../assets/the-design-system/video-game-magic-wand.svg" aria-hidden="true" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -62,7 +62,7 @@
       <!-- Flexible -->
       <div class="principleContainer e-mb-72">
         <div>
-          <img src="../../../../assets/the-design-system/module-puzzle.svg" />
+          <img src="../../../../assets/the-design-system/module-puzzle.svg" aria-hidden="true" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -84,7 +84,7 @@
       <!-- Open -->
       <div class="principleContainer e-mb-72">
         <div>
-          <img src="../../../../assets/the-design-system/ecology-globe-hand.svg" />
+          <img src="../../../../assets/the-design-system/ecology-globe-hand.svg" aria-hidden="true" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -106,7 +106,7 @@
       <!-- Quality -->
       <div class="principleContainer e-mb-72">
         <div>
-          <img src="../../../../assets/the-design-system/rating-star-winner.svg" />
+          <img src="../../../../assets/the-design-system/rating-star-winner.svg" aria-hidden="true" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -128,7 +128,7 @@
       <!-- Innovative -->
       <div class="principleContainer">
         <div>
-          <img src="../../../../assets/the-design-system/space-rocket-flying.svg" />
+          <img src="../../../../assets/the-design-system/space-rocket-flying.svg" aria-hidden="true" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
