--- a/packages/web/src/app/doc-pages/other-pages/typography-doc/typography-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/typography-doc/typography-doc.component.html
@@ -53,6 +53,7 @@
           height="500"
           src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FhvQucRpSHYZtSiIKM7NgBo%2FTypography%3Fnode-id%3D1854%253A2747"
           allowfullscreen
+          title="Embedded sketch from Figma showing all typographies with information."
         ></iframe>
       </div>
     </ng-container>
@@ -63,16 +64,16 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Red Hat Display VS Red Hat Text'">
         <ng-container ngProjectAs="sectionContent">
-          <b>Red Hat Display</b>
+          <strong>Red Hat Display</strong>
           has denser letter space and higher x-height and is suitable in large sizes, for example in titles.
-          <b>Red Hat Text</b>
+          <strong>Red Hat Text</strong>
           has a slightly smaller x-height, more space and is designed for good readability in smaller sizes.
         </ng-container>
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'Alternative font'">
         <ng-container ngProjectAs="sectionContent">
           We use
-          <b>Verdana</b>
+          <strong>Verdana</strong>
           as an alternative system font. It’s only used in the cases where it isn’t possible to use the
           profile font, for example digital documents and templates that are shared with people outside of
           Elvia who might not have the profile font installed. Verdana is less dense than Red Hat, but to
@@ -83,12 +84,12 @@
       <app-component-subsection [sectionTitle]="'Titles'">
         <ng-container ngProjectAs="sectionContent">
           <div>
-            <b>Titles (lg, md, sm, xs)</b>
+            <strong>Titles (lg, md, sm, xs)</strong>
             are used as headings for your content. They will stand out from the rest with their heavyweight
             and enhance visual hierarchy. We have 4 headings in different sizes.
           </div>
           <div class="e-mt-16">
-            <b>Title Caps</b>
+            <strong>Title Caps</strong>
             can be used as a small subheading. Caps will not stand out the same way as titles but will enhance
             visual hierarchy together with text medium or small.
           </div>
@@ -98,20 +99,20 @@
       <app-component-subsection [sectionTitle]="'Body text'">
         <ng-container ngProjectAs="sectionContent">
           <div>
-            <b>Text Lead</b>
+            <strong>Text Lead</strong>
             is our biggest text option and used for introduction of an article between heading and paragraph
             as a brief summary of the content.
           </div>
           <div class="e-mt-16">
-            <b>Text Large</b>
+            <strong>Text Large</strong>
             is our main option for longer text in articles at external webpages.
           </div>
           <div class="e-mt-16">
-            <b>Text Medium</b>
+            <strong>Text Medium</strong>
             is our main option for both long and short text in internal applications.
           </div>
           <div class="e-mt-16">
-            <b>Text Small</b>
+            <strong>Text Small</strong>
             is the smallest variant of body text and can be used in addition to text large and medium.
           </div>
         </ng-container>
@@ -120,15 +121,15 @@
       <app-component-subsection [sectionTitle]="'Special text'">
         <ng-container ngProjectAs="sectionContent">
           <div>
-            <b>Text Quote</b>
+            <strong>Text Quote</strong>
             is only used when you have quotes in articles.
           </div>
           <div class="e-mt-16">
-            <b>Text Image</b>
+            <strong>Text Image</strong>
             is only used together with an image for caption to provide more context.
           </div>
           <div class="e-mt-16">
-            <b>Text Micro</b>
+            <strong>Text Micro</strong>
             is used as small descriptive text such as dates and values. Should not be used in long paragraphs,
             as it is very small.
           </div>
