--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.html
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.html
@@ -29,7 +29,7 @@
             </span>
             <span *ngIf="cmsContent.figmaUrl" class="e-pl-16 doc-page-heading__figma-icon">
               <a href="{{ cmsContent.figmaUrl }}" target="_blank">
-                <img src="../../../../assets/icons/figma.svg" />
+                <img src="../../../../assets/icons/figma.svg" alt="Figma ikon" />
               </a>
             </span>
           </div>
