--- a/packages/web/src/app/doc-pages/components/file-upload-doc/file-upload-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/file-upload-doc/file-upload-doc.component.html
@@ -64,6 +64,7 @@
               height="450"
               src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0hCktnFvRvSHVDntaaOSEu%2FInputs%3Fnode-id%3D5162%253A36588"
               allowfullscreen
+              title="Figma embedded sketches of uploading state in the component"
             ></iframe>
           </div>
         </ng-container>
@@ -82,6 +83,7 @@
               height="450"
               src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0hCktnFvRvSHVDntaaOSEu%2FInputs%3Fnode-id%3D5166%253A36672"
               allowfullscreen
+              title="Figma embedded sketches of uploaded state in the component"
             ></iframe>
           </div>
         </ng-container>
