--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -276,7 +276,11 @@
           </div>
           <div class="e-accordion__content">
             <div class="flex-container-figma">
-              <img class="figma-img" src="../../../../assets/get-started-designers/figma.svg" />
+              <img
+                class="figma-img"
+                src="../../../../assets/get-started-designers/figma.svg"
+                aria-hidden="true"
+              />
               <div>
                 You can use Figma as an online tool, but we recommend you to
                 <a
@@ -292,6 +296,7 @@
                   class="e-link e-link--inline e-link--new-tab"
                   href="https://www.figma.com/files/880078299274452916/team/619061899486461825/ELVIA"
                   target="_blank"
+                  aria-hidden="true"
                 >
                   <span class="e-link__title">Elvia library</span>
                   <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
@@ -368,7 +373,11 @@
                 or active. There’s a bit more tips to help you with color usage in our
                 <a class="e-link e-link--inline" [routerLink]="['/brand/color']">color guidelines.</a>
               </div>
-              <img class="color-img" src="../../../../assets/get-started-designers/COLOR.svg" />
+              <img
+                class="color-img"
+                src="../../../../assets/get-started-designers/COLOR.svg"
+                aria-hidden="true"
+              />
             </div>
 
             <div class="e-mt-24">
@@ -408,7 +417,7 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <img class="e-w-100" src="../../../../assets/get-started-designers/GRID.svg" />
+            <img class="e-w-100" src="../../../../assets/get-started-designers/GRID.svg" aria-hidden="true" />
 
             <div class="e-mt-24">
               In Elvia, we follow the 8 point grid. If you haven’t worked with it before we recommend you to
