--- a/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
@@ -428,10 +428,10 @@
               green light in between all the white and black.
               <app-do-dont-text>
                 <ng-container ngProjectAs="do">
-                  <img src="assets/color-doc/a.svg" style="max-width: 100%" aria-hidden="true" />
+                  <img src="assets/color-doc/a.svg" style="max-width: 100%" alt="" />
                 </ng-container>
                 <ng-container ngProjectAs="dont">
-                  <img src="assets/color-doc/b.svg" style="max-width: 100%" aria-hidden="true" />
+                  <img src="assets/color-doc/b.svg" style="max-width: 100%" alt="" />
                 </ng-container>
               </app-do-dont-text>
             </ng-container>
