--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -280,11 +280,7 @@
           </div>
           <div class="e-accordion__content">
             <div class="flex-container-figma">
-              <img
-                class="figma-img"
-                src="../../../../assets/get-started-designers/figma.svg"
-                aria-hidden="true"
-              />
+              <img class="figma-img" src="../../../../assets/get-started-designers/figma.svg" alt="" />
               <div>
                 You can use Figma as an online tool, but we recommend you to
                 <a
@@ -383,11 +379,7 @@
                 or active. There’s a bit more tips to help you with color usage in our
                 <a class="e-link e-link--inline" [routerLink]="['/brand/color']">color guidelines.</a>
               </div>
-              <img
-                class="color-img"
-                src="../../../../assets/get-started-designers/COLOR.svg"
-                aria-hidden="true"
-              />
+              <img class="color-img" src="../../../../assets/get-started-designers/COLOR.svg" alt="" />
             </div>
 
             <div class="e-mt-24">
@@ -429,7 +421,7 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <img class="e-w-100" src="../../../../assets/get-started-designers/GRID.svg" aria-hidden="true" />
+            <img class="e-w-100" src="../../../../assets/get-started-designers/GRID.svg" alt="" />
 
             <div class="e-mt-24">
               In Elvia, we follow the 8 point grid. If you haven’t worked with it before we recommend you to
