Sonarcloud issues - All bugs in web (#802)
* Sonarcloud issues - All bugs

--- a/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
@@ -411,22 +411,27 @@
           Elvia is mainly white and dark grey, with some black components and a touch of green in details such
           as icons, illustration and active states.
           <div>
-            <img style="width: calc(20% + 180px)" class="e-p-24" src="assets/color-doc/color-weight.svg" />
+            <img
+              style="width: calc(20% + 180px)"
+              class="e-p-24"
+              src="assets/color-doc/color-weight.svg"
+              alt="Illustrating how much of each color should be used"
+            />
           </div>
 
           <app-component-subsubsection [sectionTitle]="'Green'">
             <ng-container ngProjectAs="sectionContent">
               Green shows that Elvia is ON, activated, fully charged and environmentally friendly. The green
-              colour should be used intentionally and should not be used on large surfaces as a background.
-              The green color are used to display when something is active/clickable on interactions. It’s
-              also used in illustration and icons to highlight the most important or just to get a touch of
-              the green light in between all the white and black.
+              color should be used intentionally and should not be used on large surfaces as a background. The
+              green color are used to display when something is active/clickable on interactions. It’s also
+              used in illustration and icons to highlight the most important or just to get a touch of the
+              green light in between all the white and black.
               <app-do-dont-text>
                 <ng-container ngProjectAs="do">
-                  <img src="assets/color-doc/a.svg" style="max-width: 100%" />
+                  <img src="assets/color-doc/a.svg" style="max-width: 100%" alt="" />
                 </ng-container>
                 <ng-container ngProjectAs="dont">
-                  <img src="assets/color-doc/b.svg" style="max-width: 100%" />
+                  <img src="assets/color-doc/b.svg" style="max-width: 100%" alt="" />
                 </ng-container>
               </app-do-dont-text>
             </ng-container>
