--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -280,7 +280,7 @@
           </div>
           <div class="e-accordion__content">
             <div class="flex-container-figma">
-              <img class="figma-img" src="../../../../assets/get-started-designers/figma.svg" />
+              <img class="figma-img" src="../../../../assets/get-started-designers/figma.svg" alt="" />
               <div>
                 You can use Figma as an online tool, but we recommend you to
                 <a
@@ -298,6 +298,7 @@
                   class="e-link e-link--inline e-link--new-tab"
                   href="https://www.figma.com/files/880078299274452916/team/619061899486461825/ELVIA"
                   target="_blank"
+                  aria-hidden="true"
                 >
                   <span class="e-link__title">Elvia library</span>
                   <span class="e-link__icon">
@@ -378,7 +379,7 @@
                 or active. There’s a bit more tips to help you with color usage in our
                 <a class="e-link e-link--inline" [routerLink]="['/brand/color']">color guidelines.</a>
               </div>
-              <img class="color-img" src="../../../../assets/get-started-designers/COLOR.svg" />
+              <img class="color-img" src="../../../../assets/get-started-designers/COLOR.svg" alt="" />
             </div>
 
             <div class="e-mt-24">
@@ -420,7 +421,7 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <img class="e-w-100" src="../../../../assets/get-started-designers/GRID.svg" />
+            <img class="e-w-100" src="../../../../assets/get-started-designers/GRID.svg" alt="" />
 
             <div class="e-mt-24">
               In Elvia, we follow the 8 point grid. If you haven’t worked with it before we recommend you to
