--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -3,16 +3,31 @@ $popover-padding: 32px;
 $popover-button-offset: -30px;
 $popover-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.08);
 $green: #29d305;
+$grey-10: #e9e9e9;
+$grey-05: #f4f4f4;
 
 .ewc-no-outline,
 .ewc-no-outline * {
   outline: none !important;
+}
+%ewc-outline {
+  outline: 2px solid #0064fa;
+  outline-offset: 2px;
 }
 
 .ewc-popover {
   display: flex;
   box-sizing: border-box;
   position: relative;
+
+  &__backdrop {
+    z-index: 100;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+  }
 
   &__trigger {
     display: flex;
@@ -30,15 +45,6 @@ $green: #29d305;
     .ewc-popover__trigger {
       z-index: 110;
     }
-  }
-
-  &__backdrop {
-    z-index: 100;
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
   }
 
   &__fixed-content-area {
@@ -72,7 +78,7 @@ $green: #29d305;
     width: max-content;
     left: 50%;
     opacity: 1;
-    z-index: 110;
+    z-index: 111;
     pointer-events: all;
     padding: $popover-padding;
     background-color: white;
@@ -128,6 +134,102 @@ $green: #29d305;
     top: 100%;
     bottom: auto;
     margin-top: 16px;
+  }
+
+  // List
+  &.ewc-popover--list .ewc-popover__content .ewc-popover__list {
+    display: flex;
+    flex-direction: column;
+    min-width: 216px;
+    box-sizing: border-box;
+    border-radius: 8px;
+
+    & > button,
+    & > a,
+    .ewc-popover__list-group > button,
+    .ewc-popover__list-group > a {
+      width: 100%;
+      border: none;
+      padding: 10px 16px;
+      background: white;
+      cursor: pointer;
+
+      display: flex;
+      align-items: center;
+
+      font-family: 'Red Hat Text', Verdana, sans-serif;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 28px;
+      letter-spacing: 0px;
+      text-align: left;
+      color: black;
+      text-decoration: none;
+
+      i {
+        margin-right: 16px;
+      }
+
+      &:hover {
+        background: $grey-05;
+      }
+      &:focus {
+        @extend %ewc-outline;
+      }
+    }
+
+    .ewc-popover__list-group {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: 'Red Hat Text', Verdana, sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 17px;
+        letter-spacing: 0.8px;
+        text-transform: uppercase;
+        text-align: left;
+        color: black;
+
+        margin: 20px 16px 4px 16px;
+      }
+    }
+    & > *:first-child,
+    .ewc-popover__list-group:first-of-type,
+    .ewc-popover__list-group:first-of-type > *:first-child {
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+    & > *:last-child,
+    .ewc-popover__list-group:last-of-type,
+    .ewc-popover__list-group:last-of-type > *:last-child {
+      border-bottom-left-radius: 8px;
+      border-bottom-right-radius: 8px;
+    }
+  }
+  &.ewc-popover--list .ewc-popover__content {
+    padding: 0;
+  }
+  &.ewc-popover--list-divider .ewc-popover__content {
+    .ewc-popover__list-group:not(:last-of-type) {
+      border-bottom: 1px solid $grey-10;
+    }
+  }
+  &.ewc-popover--list.ewc-popover--list-selectable .ewc-popover__content .ewc-popover__list {
+    & > button,
+    & > a,
+    .ewc-popover__list-group > button,
+    .ewc-popover__list-group > a {
+      padding: 10px 16px 10px 48px;
+      i {
+        margin-left: -32px;
+      }
+    }
   }
 }
 
