--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,7 +5,25 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <elvia-popover header="BankID" type="list" selectable="true" hasDivider posX="right">
+        <button slot="trigger" class="e-btn">Show popover</button>
+        <div slot="content" class="ewc-popover__list">
+          <div class="ewc-popover__list-group">
+            <button>
+              <elvia-icon name="checkBold" size="xs"></elvia-icon>
+              <span>Rediger</span>
+            </button>
+            <button>
+              <span>Slett</span>
+            </button>
+            <a>
+              <span>Last ned</span>
+            </a>
+          </div>
+        </div>
+      </elvia-popover>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
