--- a/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
@@ -9,27 +9,33 @@
 <!--BODY-->
 <div class="page-body e-mt-72">
   <!--CEG-->
-  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+  <app-component-example-generator
+    [componentData]="componentData"
+    [typesData]="typesData"
+  ></app-component-example-generator>
 
-  <!--USAGE-->
-  <app-component-section [sectionTitle]="'Usage'">
+  <!--TYPE-->
+  <app-component-section [sectionTitle]="'Type'">
     <ng-container ngProjectAs="sectionContent">
-      <app-when-to-use [whens]="does" [whenNots]="donts"></app-when-to-use>
-      <app-component-subsection [sectionTitle]="'Structure'">
+      <app-component-subsection [sectionTitle]="'Informative'">
         <ng-container ngProjectAs="sectionContent">
+          In informative popover we offer popover as a shell with options like close button, heading and text.
+          Then you can add the content you need within the area - like text and inputs for example. Popover
+          closes after clicking outside the popover, “X” or ESC KEY.
           <div
             class="e-content-loader e-mb-32 e-w-100 responsive-height"
             *ngIf="!loadedPopoverStructure"
           ></div>
           <img
+            alt="Informative popover structure"
             src="./../../../../assets/popover/Group 2791.svg"
-            class="usage-image-desktop e-mb-32 e-w-100 responsive-height"
+            class="usage-image-desktop e-w-100 responsive-height"
             (load)="hideContentLoader($event)"
           />
           <div class="usage-image-mobile e-w-100">
-            <app-component-subsubsection [sectionTitle]="'Title'">
+            <app-component-subsubsection [sectionTitle]="'Heading'">
               <ng-container ngProjectAs="sectionContent">
-                The title should be short and clear. The title is optional.
+                The heading should be short and clear. The heading is optional.
               </ng-container>
             </app-component-subsubsection>
             <app-component-subsubsection [sectionTitle]="'Content'">
@@ -48,13 +54,119 @@
               </ng-container>
             </app-component-subsubsection>
           </div>
+
+          <app-component-subsubsection [sectionTitle]="'Text'">
+            <ng-container ngProjectAs="sectionContent">
+              Recommended width for text popover are 450px. This is measured with the line length and number
+              of characters - to get a good readability.
+            </ng-container>
+          </app-component-subsubsection>
+          <app-component-subsubsection [sectionTitle]="'Custom content'">
+            <ng-container ngProjectAs="sectionContent">
+              Insert input, selection controls, buttons etc.
+            </ng-container>
+          </app-component-subsubsection>
         </ng-container>
       </app-component-subsection>
+
+      <app-component-subsection [sectionTitle]="'List'">
+        <ng-container ngProjectAs="sectionContent">
+          A list of actions in a popover that often are used together with a more-menu icon button. This can
+          be used when the space is limited or when you want to group actions. Popover closes immediately
+          after selecting action or clicking outside.
+          <img
+            alt="List popover structure"
+            src="./../../../../assets/popover/Popover list example.svg"
+            class="usage-image-desktop e-w-100 e-mt-40"
+          />
+          <div class="usage-image-mobile e-w-100">
+            <app-component-subsubsection [sectionTitle]="'Trigger'">
+              <ng-container ngProjectAs="sectionContent">
+                The trigger is often a 'more menu' icon button
+              </ng-container>
+            </app-component-subsubsection>
+            <app-component-subsubsection [sectionTitle]="'Hover'">
+              <ng-container ngProjectAs="sectionContent">
+                You get a light grey color as a background when you hover
+              </ng-container>
+            </app-component-subsubsection>
+            <app-component-subsubsection [sectionTitle]="'Content'">
+              <ng-container ngProjectAs="sectionContent">
+                Structures as a list of buttons where the entire area is clickable
+              </ng-container>
+            </app-component-subsubsection>
+          </div>
+        </ng-container>
+      </app-component-subsection>
+    </ng-container>
+  </app-component-section>
+
+  <!--OPTIONS-->
+  <app-component-section [sectionTitle]="'Options'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'List'">
+        <ng-container ngProjectAs="sectionContent">
+          <app-component-subsubsection [sectionTitle]="'Icons'">
+            <ng-container ngProjectAs="sectionContent">
+              Use icons to help users easily recognize known actions.
+
+              <app-component-example-generator
+                [componentData]="popoverListIconsCode"
+                [inlineExample]="true"
+              ></app-component-example-generator>
+            </ng-container>
+          </app-component-subsubsection>
+          <app-component-subsubsection [sectionTitle]="'Headings'">
+            <ng-container ngProjectAs="sectionContent">
+              Different actions can be separated by headings and provide more context to the actions.
+
+              <app-component-example-generator
+                [componentData]="popoverListHeadingsCode"
+                [inlineExample]="true"
+              ></app-component-example-generator>
+            </ng-container>
+          </app-component-subsubsection>
+          <app-component-subsubsection [sectionTitle]="'Selectable'">
+            <ng-container ngProjectAs="sectionContent">
+              Always one alternative selected, works likes a radio button.
+
+              <app-component-example-generator
+                [componentData]="popoverListSelectableCode"
+                [inlineExample]="true"
+              ></app-component-example-generator>
+            </ng-container>
+          </app-component-subsubsection>
+
+          <app-component-subsubsection [sectionTitle]="'Divider'">
+            <ng-container ngProjectAs="sectionContent">
+              Similar actions can be grouped by a divider. Use the prop
+              <span class="code-text">hasDivider</span>
+              and group the actions that should have divider between them with the class
+              <span class="code-text">ewc-popover__list-group</span>
+              .
+            </ng-container>
+          </app-component-subsubsection>
+        </ng-container>
+      </app-component-subsection>
+    </ng-container>
+  </app-component-section>
+
+  <!--USAGE-->
+  <app-component-section [sectionTitle]="'Usage'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-when-to-use [whens]="does" [whenNots]="donts"></app-when-to-use>
 
       <app-component-subsection [sectionTitle]="'Responsive'">
         <ng-container ngProjectAs="sectionContent">
           The popover include responsive functionality and is suited for all devices. However you should keep
           in mind that it can be overwhelming on mobile if the popover has a lot of content.
+        </ng-container>
+      </app-component-subsection>
+
+      <app-component-subsection [sectionTitle]="'Position'">
+        <ng-container ngProjectAs="sectionContent">
+          Popover can be positioned above and below the clickable trigger and aligned in the center, left or
+          right.
         </ng-container>
       </app-component-subsection>
     </ng-container>
