--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -241,7 +241,7 @@ body {
 .e-accordion__item .e-accordion__content {
   max-height: 0;
   opacity: 0;
-  padding-top: 0;
+  padding-top: 0px;
   transition: max-height 0.18s cubic-bezier(0, 0.18, 0.9, 1);
   transition: opacity 0.17s cubic-bezier(0.4, 0.01, 0.78, 1.1);
   transition: padding-top 0.18s cubic-bezier(0, 0.18, 1, 1);
@@ -431,7 +431,6 @@ body {
   padding-top: 0;
   pointer-events: none;
   overflow: hidden;
-  padding-top: 0px;
   font-size: 14px;
   line-height: 24px;
 }
@@ -558,8 +557,6 @@ body {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  font-size: 16px;
-  line-height: 28px;
   max-width: 758px;
 }
 .e-alert__content .e-alert__text ul {
@@ -656,19 +653,12 @@ body {
   min-height: 32px;
 }
 .e-alert.e-alert--global.e-alert--expandable .e-alert__title .e-alert__accordion {
-  width: 24px;
-  height: 24px;
-  margin-left: 24px;
   -o-animation: rotate-center-forward 0.2s ease-in-out both;
   -moz-animation: rotate-center-forward 0.2s ease-in-out both;
   -webkit-animation: rotate-center-forward 0.2s ease-in-out both;
   animation: rotate-center-forward 0.2s ease-in-out both;
   display: flex;
-  width: 24px;
-  height: 24px;
-}
-.e-alert.e-alert--global.e-alert--expandable .e-alert__title .e-alert__accordion img,
-.e-alert.e-alert--global.e-alert--expandable .e-alert__title .e-alert__accordion i {
+  margin-left: 24px;
   width: 24px;
   height: 24px;
 }
@@ -854,12 +844,11 @@ body {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 28px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: unset;
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  font-weight: 500;
   margin-bottom: 0px;
 }
 .e-alert.e-alert--local .e-alert__close, .e-alert:not(.e-alert--global):not(.e-alert--toast) .e-alert__close {
@@ -916,12 +905,11 @@ body {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
   line-height: 22px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: unset;
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  font-weight: 500;
 }
 .e-alert.e-alert--toast .e-alert__content .e-alert__text {
   font-family: Red Hat Text, Verdana, sans-serif;
@@ -967,7 +955,6 @@ body {
   align-items: center;
 }
 .e-alert.e-alert--actions .e-alert__content .e-alert__actions {
-  margin-left: auto;
   display: flex;
   align-items: center;
   padding-left: 24px;
@@ -1822,7 +1809,6 @@ input:focus {
 }
 @media (hover: hover), all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .e-btn.e-btn--tertiary.e-btn--inverted:hover:not(:disabled):not(.e-btn--loading) {
-    border-bottom-color: #29d305;
     border-color: #29d305;
     background: none;
   }
@@ -1877,7 +1863,6 @@ input:focus {
   cursor: not-allowed;
 }
 .e-btn.e-btn--tertiary.e-btn---hover {
-  border-bottom-color: #29d305;
   border-color: #29d305;
   background: none;
 }
@@ -1886,7 +1871,6 @@ input:focus {
 }
 @media (hover: hover), all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .e-btn.e-btn--tertiary:hover:not(:disabled):not(.e-btn--loading) {
-    border-bottom-color: #29d305;
     border-color: #29d305;
     background: none;
   }
@@ -2848,7 +2832,6 @@ input:focus {
 .e-radio-filter label .e-radio-filter__label {
   font-family: "Red Hat Display", Verdana, sans-serif;
   font-style: normal;
-  font-weight: 500;
   font-size: 16px;
   line-height: 22px;
   font-weight: 500;
@@ -3095,12 +3078,11 @@ input:focus {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 28px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: unset;
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  font-weight: 500;
 }
 @media (max-width: 1023px) {
   .e-header__top-bar-desktop__title {
@@ -3603,7 +3585,7 @@ input:focus {
   padding: 4px 8px;
   border-radius: 4px;
   background: #e9e9e9;
-  font-family: "Red Hat Text", "Verdana, sans-serif";
+  font-family: "Red Hat Text", Verdana, sans-serif;
   font-size: 11px;
   font-weight: 400;
   line-height: 16px;
@@ -5825,12 +5807,11 @@ input:focus {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
   line-height: 22px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: unset;
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  font-weight: 500 !important;
   padding-bottom: 8px;
   margin-right: 16px;
 }
@@ -7585,7 +7566,6 @@ input:focus {
 }
 .e-fileupload__input label {
   z-index: 1;
-  font-weight: 500;
   display: inline-flex;
   align-items: center;
   border-bottom: 2.5px solid transparent;
@@ -7688,7 +7668,6 @@ input:focus {
   margin-bottom: 8px;
 }
 .e-radio.e-radio--sm {
-  line-height: 22px;
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
   line-height: 22px;
