Sonarcloud bug fixes

--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -44,7 +44,7 @@
 
     <div class="e-title-xs e-my-16">Normal Mobile</div>
     <div style="width: 305px; margin: 16px">
-      <table class="e-table-mobile">
+      <table class="e-table-mobile" aria-label="Beskrivelse av tabellen">
         <thead>
           <tr>
             <th class="e-table-mobile__cell" scope="col">Periode</th>
@@ -147,7 +147,7 @@
 
     <div class="e-title-xs e-my-16">Compact Mobile</div>
     <div style="width: 305px; margin: 16px">
-      <table class="e-table-mobile e-table-mobile--compact">
+      <table class="e-table-mobile e-table-mobile--compact" aria-label="Beskrivelse av tabellen">
         <thead>
           <tr>
             <th class="e-table-mobile__cell" scope="col">Periode</th>
