--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -29,7 +29,10 @@
   </table>
 </div>
 <div class="e-table-container mobile properties-mobile">
-  <table class="e-table-mobile e-table-mobile--sticky-header e-table-mobile--compact">
+  <table
+    class="e-table-mobile e-table-mobile--sticky-header e-table-mobile--compact"
+    aria-label="Beskrivelse av tabellen"
+  >
     <thead>
       <tr>
         <th class="e-table-mobile__cell" scope="col">Prop</th>
