--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
@@ -2,7 +2,7 @@
 
 .e-table.e-table--compact td.table-code-text,
 .e-table.e-table--compact th.table-code-text {
-  font-family: 'Red Hat Mono';
+  font-family: 'Red Hat Mono', Verdana, sans-serif;
 }
 
 .e-table-container.desktop {
