--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -57,9 +57,18 @@
             <img
               *ngIf="christmas && !halloween"
               src="assets/holidayIllustrations/ChristmasIllustration.png"
+              alt="Designsystem christmas illustration"
             />
-            <img *ngIf="halloween && !christmas" src="assets/holidayIllustrations/Halloween.png" />
-            <img *ngIf="!christmas && !halloween" src="assets/HomeIllustration.png" />
+            <img
+              *ngIf="halloween && !christmas"
+              src="assets/holidayIllustrations/Halloween.png"
+              alt="Designsystem halloween illustration"
+            />
+            <img
+              *ngIf="!christmas && !halloween"
+              src="assets/HomeIllustration.png"
+              alt="Designsystem illustration"
+            />
           </div>
         </div>
       </div>
@@ -67,9 +76,21 @@
       <div class="home-top-mobile">
         <div class="col-md-12">
           <div class="image-div home-image-animation">
-            <img *ngIf="christmas" src="assets/holidayIllustrations/ChristmasIllustration.png" />
-            <img *ngIf="halloween && !christmas" src="assets/holidayIllustrations/Halloween.png" />
-            <img *ngIf="!christmas && !halloween" src="assets/HomeIllustration.png" />
+            <img
+              *ngIf="christmas"
+              src="assets/holidayIllustrations/ChristmasIllustration.png"
+              alt="Designsystem christmas illustration"
+            />
+            <img
+              *ngIf="halloween && !christmas"
+              src="assets/holidayIllustrations/Halloween.png"
+              alt="Designsystem halloween illustration"
+            />
+            <img
+              *ngIf="!christmas && !halloween"
+              src="assets/HomeIllustration.png"
+              alt="Designsystem illustration"
+            />
           </div>
         </div>
       </div>
