--- a/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
@@ -40,7 +40,11 @@
       <!-- Easy -->
       <div class="principleContainer e-mb-72" style="margin-top: 88px">
         <div>
+          <<<<<<< HEAD
+          <img src="../../../../assets/the-design-system/video-game-magic-wand.svg" alt="" />
+          =======
           <img src="../../../../assets/the-design-system/video-game-magic-wand.svg" aria-label="" />
+          >>>>>>> 7ac7bd093e247d593df409213de48791fa69afe9
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -62,7 +66,11 @@
       <!-- Flexible -->
       <div class="principleContainer e-mb-72">
         <div>
+          <<<<<<< HEAD
+          <img src="../../../../assets/the-design-system/module-puzzle.svg" alt="" />
+          =======
           <img src="../../../../assets/the-design-system/module-puzzle.svg" aria-label="" />
+          >>>>>>> 7ac7bd093e247d593df409213de48791fa69afe9
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -84,7 +92,7 @@
       <!-- Open -->
       <div class="principleContainer e-mb-72">
         <div>
-          <img src="../../../../assets/the-design-system/ecology-globe-hand.svg" aria-label="" />
+          <img src="../../../../assets/the-design-system/ecology-globe-hand.svg" alt="" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -106,7 +114,7 @@
       <!-- Quality -->
       <div class="principleContainer e-mb-72">
         <div>
-          <img src="../../../../assets/the-design-system/rating-star-winner.svg" aria-label="" />
+          <img src="../../../../assets/the-design-system/rating-star-winner.svg" alt="" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
@@ -128,7 +136,7 @@
       <!-- Innovative -->
       <div class="principleContainer">
         <div>
-          <img src="../../../../assets/the-design-system/space-rocket-flying.svg" aria-label="" />
+          <img src="../../../../assets/the-design-system/space-rocket-flying.svg" alt="" />
         </div>
         <div class="principleInfo">
           <div class="e-text-body e-mb-24">
