--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -129,6 +129,7 @@
           [ariaLabel]="'Fjern filtrering for ' + chip.value"
           [disabled]="chip.disabled"
           (onDelete)="handleOnDelete($event.detail.value)"
+          (isSelectedOnChange)="logValue('chip', $event.detail.value)"
           [inlineStyle]="{ margin: '8px' }"
         ></elvia-chip>
       </div>
@@ -137,12 +138,15 @@
 
     <h3>Clickable chips</h3>
     <div style="display: flex; flex-direction: row">
-      <elvia-chip
-        [value]="2021"
-        color="orange"
-        type="legend"
-        (valueOnChange)="handleOnChange($event.detail.value)"
-      ></elvia-chip>
+      <div *ngFor="let chip of filteredKeys">
+        <elvia-chip
+          [value]="chip"
+          [isSelected]="filteredValues[chip]"
+          color="orange"
+          type="legend"
+          (isSelectedOnChange)="handleOnChange($event)"
+        ></elvia-chip>
+      </div>
     </div>
     Selected values:
     <span *ngFor="let key of filteredKeys">
