--- a/packages/elvis/percy/components/colors.html
+++ b/packages/elvis/percy/components/colors.html
@@ -10,6 +10,7 @@
     <div class="e-title-sm e-mt-16">Colors</div>
     <div class="e-mt-48 e-mb-72 e-w-50" style="display: flex; flex-direction: column">
       <div class="e-w-100 e-bg-green" style="height: 100px">e-bg-green</div>
+      <div class="e-w-100 e-bg-elvia-charge" style="height: 100px">e-bg-elvia-charge</div>
       <div class="e-w-100 e-bg-yellow" style="height: 100px">e-bg-yellow</div>
       <div class="e-w-100 e-bg-orange" style="height: 100px">e-bg-orange</div>
       <div class="e-w-100 e-bg-red" style="height: 100px">e-bg-red</div>
@@ -21,17 +22,23 @@
       <div class="e-w-100 e-bg-red-tomato" style="height: 100px">e-bg-red-tomato</div>
       <div class="e-w-100 e-bg-grey-90" style="height: 100px">e-bg-grey-90</div>
       <div class="e-w-100 e-bg-grey-80" style="height: 100px">e-bg-grey-80</div>
+      <div class="e-w-100 e-bg-grey-font-grey" style="height: 100px">e-bg-font-grey</div>
       <div class="e-w-100 e-bg-grey-70" style="height: 100px">e-bg-grey-70</div>
       <div class="e-w-100 e-bg-grey-60" style="height: 100px">e-bg-grey-60</div>
       <div class="e-w-100 e-bg-grey-50" style="height: 100px">e-bg-grey-50</div>
       <div class="e-w-100 e-bg-grey-40" style="height: 100px">e-bg-grey-40</div>
       <div class="e-w-100 e-bg-grey-30" style="height: 100px">e-bg-grey-30</div>
+      <div class="e-w-100 e-bg-grey-disabled" style="height: 100px">e-bg-disabled</div>
       <div class="e-w-100 e-bg-grey-20" style="height: 100px">e-bg-grey-20</div>
       <div class="e-w-100 e-bg-grey-10" style="height: 100px">e-bg-grey-10</div>
       <div class="e-w-100 e-bg-grey-05" style="height: 100px">e-bg-grey-05</div>
+      <div class="e-w-100 e-bg-grey-disabled-light" style="height: 100px">e-bg-disabled-light</div>
       <div class="e-w-100 e-bg-grey-02" style="height: 100px">e-bg-grey-02</div>
       <div class="e-w-100 e-bg-white" style="height: 100px">e-bg-white</div>
+      <div class="e-w-100 e-bg-elvia-on" style="height: 100px">e-bg-elvia-on</div>
+      <div class="e-w-100 e-bg-font-color-light" style="height: 100px">e-bg-font-color-light</div>
       <div class="e-w-100 e-bg-black" style="height: 100px">e-bg-black</div>
+      <div class="e-w-100 e-bg-font-color" style="height: 100px">e-bg-font-color</div>
       <div class="e-w-100 e-bg-grey" style="height: 100px">e-bg-grey</div>
     </div>
   </body>
